--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "bullmq": "^5.63.0",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "exceljs": "^4.4.0",
@@ -24,6 +25,7 @@
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "handlebars": "^4.7.8",
+    "helmet": "^8.1.0",
     "ical-generator": "^4.0.0",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
